--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       # Runs a single command using the runners shell
       - name: Print Greetings
-        run: echo Hello, you!
+        run: echo Hello, Viv!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          echo Good luck!
+          echo Good luck, Viv!
