--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,10 @@ jobs:
         - name: Get code
           uses: actions/checkout@v3  
         - name: Install NodeJS
-          uses: actions/setup-node@v5
+          uses: actions/setup-node@v3
           with:
              node-version: 18
         - name: Install dependencies
-          run: npm clean-install
+          run: npm ci
         - name: Run tests
           run: npm test
